--- a/quantum-circuit-editor/simulation/requirements.txt
+++ b/quantum-circuit-editor/simulation/requirements.txt
@@ -1,2 +1,11 @@
 pytest==7.4.0
 pydantic==2.11.3
+
+# Code quality tools
+black==23.9.1
+isort==5.12.0
+mypy==1.5.1
+flake8==6.1.0
+pylint==2.17.5
+bandit==1.7.5
+pytest-cov==4.1.0
