--- a/quantum-circuit-editor/simulation/requirements.txt
+++ b/quantum-circuit-editor/simulation/requirements.txt
@@ -5,7 +5,8 @@ pydantic==2.11.3
 black==23.9.1
 isort==5.12.0
 mypy==1.5.1
-flake8==6.1.0
-pylint==2.17.5
+flake8==7.1.0
+pylint==3.3.6
 bandit==1.7.5
 pytest-cov==4.1.0
+pre-commit==4.2.0
