--- a/quantum-circuit-editor/simulation/.pre-commit-config.yaml
+++ b/quantum-circuit-editor/simulation/.pre-commit-config.yaml
@@ -27,26 +27,31 @@ repos:
     hooks:
     -   id: flake8
         additional_dependencies: [flake8-docstrings]
+        args: ["--config=quantum-circuit-editor/simulation/setup.cfg"]
+        files: ^quantum-circuit-editor/simulation/
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.5.1
     hooks:
     -   id: mypy
         additional_dependencies: [pydantic, types-requests]
-        exclude: ^tests/
+        exclude: ^quantum-circuit-editor/simulation/tests/
+        files: ^quantum-circuit-editor/simulation/
 
 -   repo: https://github.com/PyCQA/bandit
     rev: 1.7.5
     hooks:
     -   id: bandit
-        args: ["-c", "pyproject.toml"]
-        exclude: ^tests/
+        args: ["-c", "quantum-circuit-editor/simulation/pyproject.toml"]
+        exclude: ^quantum-circuit-editor/simulation/tests/
+        files: ^quantum-circuit-editor/simulation/
 
 -   repo: https://github.com/pycqa/pylint
     rev: v3.3.6
     hooks:
     -   id: pylint
         args: [
-            "--rcfile=pyproject.toml",
+            "--rcfile=quantum-circuit-editor/simulation/pyproject.toml",
             "--disable=import-error",  # Import errors are handled by mypy
         ]
+        files: ^quantum-circuit-editor/simulation/
